# torch_tensor_ipc

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: test_cuda_ipc_cpp.py  test_server_client.py
torch_tensor_ipc/: _cuda_ipc_ext.cpp  client.py  cuda_ipc_ext.py  protocol.py  server.py
